--- a/TVAE.ipynb
+++ b/TVAE.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "63524ceb-fadb-46e0-8663-e26f4750ec7a",
    "metadata": {},
    "outputs": [
@@ -40,15 +40,16 @@
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "from torch.optim.lr_scheduler import StepLR, MultiStepLR, ExponentialLR, ReduceLROnPlateau, CosineAnnealingLR, LambdaLR\n",
     "#from torch.utils.tensorboard import SummaryWriter\n",
+    "import os\n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
     "import wandb\n",
-    "from preprocessing import DataPreprocessor, in_out_to_list\n",
-    "from analyse import DataAnalyzer, display_output\n",
-    "import os\n",
+    "from data_analyse.preprocessing import DataPreprocessor, in_out_to_list\n",
+    "from data_analyse.analyse import DataAnalyzer, display_output\n",
     "os.environ[\"WANDB_NOTEBOOK_NAME\"] = \"TVAE.ipynb\"\n",
     "import time\n",
     "from datetime import datetime, timedelta\n",
-    "import evaluation\n",
+    "import data_analyse.evaluation\n",
     "import seaborn as sns\n",
     "import warnings\n",
     "from typing import Dict, List, Tuple, Union\n",
