--- a/CTGAN.ipynb
+++ b/CTGAN.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "5e1a9a7b-1dfc-452a-8b98-f057b78594e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "\n",
@@ -18,13 +27,14 @@
     "\n",
     "from data_transformer.data_sampler import DataSampler\n",
     "from data_transformer.data_transformer import DataTransformer\n",
+    "import wandb\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 57,
    "id": "263baa92-b1c6-496d-a9f6-813d1216de7d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +218,7 @@
     "                'CTGAN does not support null values in the continuous training data. '\n",
     "                'Please remove all null values from your continuous training data.'\n",
     "            )\n",
-    "    def fit(self, train_data, discrete_columns=(), epochs=300, batch_size=500):\n",
+    "    def fit(self, train_data, discrete_columns=(), epochs=300, batch_size=500, track = False):\n",
     "        assert batch_size % 2 == 0\n",
     "        self._validate_discrete_columns(train_data, discrete_columns)\n",
     "        self._validate_null_data(train_data, discrete_columns)\n",
@@ -253,7 +263,16 @@
     "\n",
     "\n",
     "        steps_per_epoch = max(len(train_data) // batch_size, 1)\n",
-    "        for i in epoch_iterator:\n",
+    "        if track:\n",
+    "            run = wandb.init(project=\"Data Augmentation - CTGAN\", name=\"ctgan\", config={\n",
+    "                \"epochs\": epochs,\n",
+    "                \"batch_size\": batch_size,\n",
+    "                \"generator_lr\": self._generator_lr,\n",
+    "                \"discriminator_lr\": self._discriminator_lr,\n",
+    "                \"pac\": self.pac,\n",
+    "                \"data_dim\": data_dim\n",
+    "            })\n",
+    "        for i in range(epochs):\n",
     "            for id_ in range(steps_per_epoch):\n",
     "                for n in range(self._discriminator_steps):\n",
     "                    fakez = torch.normal(mean=mean, std=std)\n",
@@ -334,6 +353,12 @@
     "\n",
     "            generator_loss = loss_g.detach().cpu().item()\n",
     "            discriminator_loss = loss_d.detach().cpu().item()\n",
+    "            if track:\n",
+    "                wandb.log({\n",
+    "                \"epoch\": i,\n",
+    "                \"generator_loss\": generator_loss,\n",
+    "                \"discriminator_loss\": discriminator_loss\n",
+    "                })\n",
     "            if (i + 1) % 10 == 0 or i == 0:\n",
     "                print(f\"Epoch [{i+1}/{epochs}], \"\n",
     "                      f\"Train - G Loss: {generator_loss:.4f}, D Loss: {discriminator_loss:.4f}, \"\n",
@@ -349,8 +374,8 @@
     "                )\n",
     "            else:\n",
     "                self.loss_values = epoch_loss_df\n",
-    "\n",
-    "                )\n",
+    "        wandb.finish()\n",
+    "        \n",
     "    def sample(self, n, condition_column=None, condition_value=None, batch_size= 500):\n",
     "        if condition_column is not None and condition_value is not None:\n",
     "            condition_info = self._transformer.convert_column_name_value_to_id(\n",
@@ -395,7 +420,7 @@
     "        if self._generator is not None:\n",
     "            self._generator.to(self._device)\n",
     "    def save(self, path):\n",
-    "        if self.generator is None or self.discriminator is None:\n",
+    "        if self._generator is None or self._discriminator is None:\n",
     "            raise RuntimeError(\"Model not trained. Call fit() first.\")\n",
     "        checkpoint = {\n",
     "            'generator': self._generator.state_dict(),\n",
@@ -409,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 59,
    "id": "d840576a-4765-49ca-82bd-e85e95dca37a",
    "metadata": {},
    "outputs": [
@@ -417,17 +442,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/100], Train - G Loss: 1.0860, D Loss: 0.0334, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [10/100], Train - G Loss: 1.0532, D Loss: 0.0097, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [20/100], Train - G Loss: 0.9123, D Loss: 0.0476, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [30/100], Train - G Loss: 0.9897, D Loss: 0.0235, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [40/100], Train - G Loss: 0.8721, D Loss: -0.0648, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [50/100], Train - G Loss: 0.8749, D Loss: -0.0262, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [60/100], Train - G Loss: 0.7141, D Loss: -0.1120, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [70/100], Train - G Loss: 0.6964, D Loss: -0.0683, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [80/100], Train - G Loss: 0.6560, D Loss: 0.0118, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [90/100], Train - G Loss: 0.6370, D Loss: 0.0122, LR - Generator: 0.000200, Discriminator: 0.000200\n",
-      "Epoch [100/100], Train - G Loss: 0.5534, D Loss: -0.0182, LR - Generator: 0.000200, Discriminator: 0.000200\n"
+      "Epoch [1/100], Train - G Loss: 0.7460, D Loss: 0.0235, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [10/100], Train - G Loss: 0.6551, D Loss: 0.0164, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [20/100], Train - G Loss: 0.7027, D Loss: -0.0121, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [30/100], Train - G Loss: 0.7212, D Loss: 0.0645, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [40/100], Train - G Loss: 0.4899, D Loss: 0.0557, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [50/100], Train - G Loss: 0.4857, D Loss: 0.0158, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [60/100], Train - G Loss: 0.5198, D Loss: 0.0043, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [70/100], Train - G Loss: 0.4258, D Loss: 0.0398, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [80/100], Train - G Loss: 0.3130, D Loss: -0.0181, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [90/100], Train - G Loss: 0.3534, D Loss: 0.1030, LR - Generator: 0.000200, Discriminator: 0.000200\n",
+      "Epoch [100/100], Train - G Loss: 0.3269, D Loss: -0.1113, LR - Generator: 0.000200, Discriminator: 0.000200\n"
      ]
     }
    ],
@@ -452,17 +477,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 41,
    "id": "b0e11886-5809-48e2-9e98-d9d17bee3f59",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yo\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -492,99 +510,99 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>z</td>\n",
-       "      <td>0.501584</td>\n",
+       "      <td>0.991171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>z</td>\n",
-       "      <td>-0.429013</td>\n",
+       "      <td>1.560485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>z</td>\n",
-       "      <td>0.958579</td>\n",
+       "      <td>2</td>\n",
+       "      <td>zz</td>\n",
+       "      <td>0.044675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>z</td>\n",
-       "      <td>0.632423</td>\n",
+       "      <td>3</td>\n",
+       "      <td>zz</td>\n",
+       "      <td>0.947360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>z</td>\n",
-       "      <td>0.379138</td>\n",
+       "      <td>1.321150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>z</td>\n",
-       "      <td>-0.662935</td>\n",
+       "      <td>0.526378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2</td>\n",
-       "      <td>z</td>\n",
-       "      <td>0.462475</td>\n",
+       "      <td>1</td>\n",
+       "      <td>zz</td>\n",
+       "      <td>0.112976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>1</td>\n",
        "      <td>z</td>\n",
-       "      <td>0.104622</td>\n",
+       "      <td>0.530903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>3</td>\n",
        "      <td>z</td>\n",
-       "      <td>0.800989</td>\n",
+       "      <td>1.207839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2</td>\n",
-       "      <td>zz</td>\n",
-       "      <td>0.228826</td>\n",
+       "      <td>z</td>\n",
+       "      <td>1.546595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>z</td>\n",
-       "      <td>1.280704</td>\n",
+       "      <td>0.251251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>z</td>\n",
-       "      <td>0.080100</td>\n",
+       "      <td>0.819802</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>z</td>\n",
-       "      <td>0.955556</td>\n",
+       "      <td>1.275956</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>z</td>\n",
-       "      <td>0.794053</td>\n",
+       "      <td>1.171638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>1</td>\n",
        "      <td>zz</td>\n",
-       "      <td>0.771725</td>\n",
+       "      <td>1.393879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>3</td>\n",
        "      <td>z</td>\n",
-       "      <td>1.598798</td>\n",
+       "      <td>1.451684</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -592,41 +610,54 @@
       ],
       "text/plain": [
        "    A   B         C\n",
-       "0   1   z  0.501584\n",
-       "1   1   z -0.429013\n",
-       "2   3   z  0.958579\n",
-       "3   1   z  0.632423\n",
-       "4   1   z  0.379138\n",
-       "5   2   z -0.662935\n",
-       "6   2   z  0.462475\n",
-       "7   1   z  0.104622\n",
-       "8   3   z  0.800989\n",
-       "9   2  zz  0.228826\n",
-       "10  2   z  1.280704\n",
-       "11  1   z  0.080100\n",
-       "12  3   z  0.955556\n",
-       "13  1   z  0.794053\n",
-       "14  1  zz  0.771725\n",
-       "15  3   z  1.598798"
+       "0   2   z  0.991171\n",
+       "1   2   z  1.560485\n",
+       "2   2  zz  0.044675\n",
+       "3   3  zz  0.947360\n",
+       "4   1   z  1.321150\n",
+       "5   3   z  0.526378\n",
+       "6   1  zz  0.112976\n",
+       "7   1   z  0.530903\n",
+       "8   3   z  1.207839\n",
+       "9   2   z  1.546595\n",
+       "10  3   z  0.251251\n",
+       "11  3   z  0.819802\n",
+       "12  2   z  1.275956\n",
+       "13  2   z  1.171638\n",
+       "14  1  zz  1.393879\n",
+       "15  3   z  1.451684"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ctgan.sample(n=16, condition_column='A', condition_value= 3)"
+    "ctgan.sample(n=16, condition_column='A', condition_value= 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "fc80d631-f969-48e2-8d4b-a64b5b04bd97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'CTGAN' object has no attribute '_discriminator'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[61], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ctgan\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[57], line 382\u001b[0m, in \u001b[0;36mCTGAN.save\u001b[1;34m(self, path)\u001b[0m\n\u001b[0;32m    381\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(\u001b[38;5;28mself\u001b[39m, path):\n\u001b[1;32m--> 382\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_generator \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_discriminator \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    383\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel not trained. Call fit() first.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    384\u001b[0m     checkpoint \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m    385\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgenerator\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_generator\u001b[38;5;241m.\u001b[39mstate_dict(),\n\u001b[0;32m    386\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiscriminator\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_discriminator\u001b[38;5;241m.\u001b[39mstate_dict(),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    389\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtransformer\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_transformer  \n\u001b[0;32m    390\u001b[0m     }\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'CTGAN' object has no attribute '_discriminator'"
+     ]
+    }
+   ],
    "source": [
-    "ctgan.sa"
+    "ctgan.save(\"a\")"
    ]
   }
  ],
