--- a/CTGAN.ipynb
+++ b/CTGAN.ipynb
@@ -110,10 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "263baa92-b1c6-496d-a9f6-813d1216de7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Module' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m torch\u001b[38;5;241m.\u001b[39misnan(transformed)\u001b[38;5;241m.\u001b[39many():\n\u001b[0;32m      5\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m transformed\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSmallRes\u001b[39;00m(Module):\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, d_input, d_output):\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Module' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def _gumbel_softmax(logits, tau=1, hard=False, eps=1e-10, dim=-1):\n",
     "    for _ in range(10):\n",
@@ -564,15 +576,8 @@
     "            'discriminator_optimizer': self.optimizerD.state_dict(),\n",
     "            'transformer': self._transformer,\n",
     "            'pac': self.pac\n",
-    "        }\n",
-    "        torch.save(checkpoint, path)\n",
-    "    def load(self, path):\n",
-    "        state = torch.load(path, map_location=self._device, weights_only= False)\n",
-    "        self._generator = state['generator']\n",
-    "        self._discriminator = state['discriminator']\n",
-    "        self.optimizerG = state['generator_optimizer']\n",
-    "        self.optimizerD = state['discriminator_optimizer']\n",
-    "        self.pac = state['pac']"
+    "        }    \n",
+    "        torch.save(checkpoint, path)"
    ]
   },
   {
